Try to fix issue in nav menu on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,12 +108,12 @@ main {
     font-size: 20px;
 }
 
-/*.header__navigation {*/
-/*    !*font-size: 25px;*!*/
-/*}*/
+.header__navigation {
+    /*font-size: 25px;*/
+}
 
 .header__navigation:hover .header__links {
-    display: inline-block;
+    display: block;
     background-color: rgba(32, 32, 32, 0.7);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -124,9 +124,9 @@ main {
 .header__links {
     list-style-type: none;
     display: none;
+    min-width: 100dvw;
     position: absolute;
     top: 86px;
-    left: 0;
     right: 0;
     z-index: 1;
 }
